--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -13,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "DATA_DIR = '/Users/youngtodd/cs526/data'\n",
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +35,7 @@
        "70000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
