--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -13,20 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = '/Users/youngtodd/cs526/data'\n",
+    "DATA_DIR = '../data'\n",
     "\n",
     "mnist = fetch_mldata('MNIST original', data_home=DATA_DIR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "70000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
