--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -8,25 +8,26 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.datasets import fetch_mldata"
+    "from sklearn.datasets import fetch_mldata\n",
+    "\n",
+    "\n",
+    "DATA_DIR = '../data'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = '../data'\n",
-    "\n",
     "mnist = fetch_mldata('MNIST original', data_home=DATA_DIR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +36,7 @@
        "70000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
